fix Integer ctr warnings, bump lombok version